@@ -73,7 +73,7 @@ int getColumnNear(Connection connection, int r, int n, int x) {
 		r--;
 	Integer i;
 	while (proximity < r) {
-		i = new Integer(r + proximity * direction);
+		i = Integer.valueOf(r + proximity * direction);
 		if (!colsUsed.contains(i)) {
 			colsUsed.add(i);
 			reserveColumn(connection, i);
@@ -160,7 +160,7 @@ protected int getRowNear(Connection connection, int r, int n, int x) {
 		r--;
 	Integer i;
 	while (proximity < r) {
-		i = new Integer(r + proximity * direction);
+		i = Integer.valueOf(r + proximity * direction);
 		if (!rowsUsed.contains(i)) {
 			rowsUsed.add(i);
 			reserveRow(connection, i);
@@ -306,9 +306,9 @@ public void route(Connection conn) {
 	List<Integer> positions = new ArrayList<Integer>(5);
 	boolean horizontal = startNormal.isHorizontal();
 	if (horizontal) 
-		positions.add(new Integer(start.y));
+		positions.add(Integer.valueOf(start.y));
 	else
-		positions.add(new Integer(start.x));
+		positions.add(Integer.valueOf(start.x));
 	horizontal = !horizontal;
 
 	if (startNormal.dotProduct(endNormal) == 0) {
@@ -325,7 +325,7 @@ public void route(Connection conn) {
 				else 
 					i = average.x;
 			}
-			positions.add(new Integer(i));
+			positions.add(Integer.valueOf(i));
 			horizontal = !horizontal;
 
 			if (endNormal.dotProduct(direction) > 0)
@@ -336,7 +336,7 @@ public void route(Connection conn) {
 				else 
 					i = average.x;
 			}
-			positions.add(new Integer(i));
+			positions.add(Integer.valueOf(i));
 			horizontal = !horizontal;
 		}
 	} else {
@@ -346,13 +346,13 @@ public void route(Connection conn) {
 				i = startNormal.similarity(start.getAdded(startNormal.getScaled(10)));
 			else
 				i = endNormal.similarity(end.getAdded(endNormal.getScaled(10)));
-			positions.add(new Integer(i));
+			positions.add(Integer.valueOf(i));
 			horizontal = !horizontal;
 		} else {
 			//3 or 1
 			if (startNormal.dotProduct(direction) < 0) {
 				i = startNormal.similarity(start.getAdded(startNormal.getScaled(10)));
-				positions.add(new Integer(i));
+				positions.add(Integer.valueOf(i));
 				horizontal = !horizontal;
 			}
 
@@ -360,20 +360,20 @@ public void route(Connection conn) {
 				i = average.y;
 			else 
 				i = average.x;
-			positions.add(new Integer(i));
+			positions.add(Integer.valueOf(i));
 			horizontal = !horizontal;
 
 			if (startNormal.dotProduct(direction) < 0) {
 				i = endNormal.similarity(end.getAdded(endNormal.getScaled(10)));
-				positions.add(new Integer(i));
+				positions.add(Integer.valueOf(i));
 				horizontal = !horizontal;
 			}
 		}
 	}
 	if (horizontal) 
-		positions.add(new Integer(end.y));
+		positions.add(Integer.valueOf(end.y));
 	else 
-		positions.add(new Integer(end.x));
+		positions.add(Integer.valueOf(end.x));
 	
 	processPositions(start, end, positions, startNormal.isHorizontal(), conn);
 }
