@@ -250,7 +250,7 @@ public class PagesView extends Composite implements MouseListener,PaintListener{
 	while(tmp>0){
 		g2.drawLine(zeroX,tmp - pH+zeroY,xmax+zeroX,tmp - pH+zeroY);
 		tmp = tmp - pH;
-		yy.add(new Integer(tmp));
+		yy.add(Integer.valueOf(tmp));
 	}
 	
 	tmp = xmax;
